--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "samu-app",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon v1/src/app.js"
+    "start": "node v1/src/app.js"
   },
   "author": "samu",
   "license": "ISC",
@@ -23,5 +23,8 @@
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.7"
   }
 }
