chore: reconfigure fly.yml

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,15 +1,15 @@
-name: Fly Deploy
+name: samu-api
 on:
   push:
     branches:
       - main
 jobs:
   deploy:
-    name: Deploy app
+    name: samu-api
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: superfly/flyctl-actions/setup-flyctl@main
+      - uses: mehmtdgr/samu-api
+      - uses: mehmtdgr/samu-api@main
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
