--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -8,8 +8,8 @@ jobs:
     name: samu-api
     runs-on: ubuntu-latest
     steps:
-      - uses: mehmtdgr/samu-api
-      - uses: mehmtdgr/samu-api@main
+      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
