--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,15 +1,15 @@
-name: samu-api
+name: Fly Deploy
 on:
   push:
     branches:
       - main
 jobs:
   deploy:
-    name: samu-api
+    name: Deploy app
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@main
+      - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
